--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,7 +64,7 @@ footer {
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 2rem;
 }
@@ -74,14 +74,30 @@ footer {
 
 /* Section */
 .section {
-    margin-bottom: 5rem;
+    padding: 6rem;
+    min-height: 100vh;
 }
 
 .section-header h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.section-header p {
+    color: var(--secondary-color);
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
+
+.portfolio-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    list-style: none;
+    padding: 0;
 }
